@startuml
entity "Phone" {
  + id : string
  name : string
  content : text
  color : string
  storage : int
  price : float
}

entity "User" {
  + id : string
    username : string
    email : string
    roles : array|json
    password : string
    createdAt : datetime
}

entity "Picture" {
    + id : string
      name : string
      location : string
}

entity "Brand" {
    + id : string
      name : string
}

Phone "1" -- "0..*" Picture
Phone "1" -- "1" Brand

@enduml
